--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,10 +35,15 @@
     <string name="invalid_username">Please enter valid username</string>
     <string name="invalid_phone">Please enter valid phone</string>
     <string name="different_password_fields">Passwords should match</string>
+    <string name="same_username">You already have this username</string>
+    <string name="same_phone">You already have this phone number</string>
+    <string name="same_email">You already have this email</string>
 
-    // Main Activity Text
+    // Profile
     <string name="welcome">Welcome,</string>
-    <string name="user_phone_label">Your phone: </string>
+    <string name="user_phone_label">Your phone:</string>
+    <string name="user_email_label">Your email:</string>
+    <string name="edit_profile">Edit profile</string>
 
     // Default String for Shared Preferences
     <string name="unavailable">Unavailable</string>
@@ -106,6 +111,7 @@
     <string name="not_found">Not Found</string>
     <string name="load_data">Loading data</string>
     <string name="saved">Saved!</string>
+    <string name="error">Error occurred</string>
 
     <string name="open">Open</string>
     <string name="close">Close</string>
